Refatoração do PlayerData